--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -135,6 +135,16 @@
             </property>
            </widget>
           </item>
+          <item row="5" column="1">
+           <widget class="QLineEdit" name="gensSLineEdit"/>
+          </item>
+          <item row="5" column="0">
+           <widget class="QLabel" name="label_12">
+            <property name="text">
+             <string>Generations/s</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
@@ -352,8 +362,8 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
-    <addaction name="actionOpen_source_image"/>
-    <addaction name="actionSave_DNA"/>
+    <addaction name="actionOpenOriginalImage"/>
+    <addaction name="actionSaveDNA"/>
    </widget>
    <addaction name="menu_File"/>
   </widget>
@@ -366,15 +376,15 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <action name="actionOpen_source_image">
+  <action name="actionOpenOriginalImage">
    <property name="text">
-    <string>Open source image ...</string>
+    <string>Open original image ...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+O</string>
    </property>
   </action>
-  <action name="actionSave_DNA">
+  <action name="actionSaveDNA">
    <property name="text">
     <string>Save DNA ...</string>
    </property>
