--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -148,11 +148,25 @@
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="startStopPushButton">
-          <property name="text">
-           <string>Start</string>
+         <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="margin">
+           <number>0</number>
           </property>
-         </widget>
+          <item>
+           <widget class="QPushButton" name="startStopPushButton">
+            <property name="text">
+             <string>Start</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="resetPushButton">
+            <property name="text">
+             <string>Reset</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
         <item>
          <layout class="QGridLayout" name="gridLayout_2" rowstretch="0,0">
