Layout optimiert. Texte nun durchgaengig auf Englisch. About-Boxen neu.

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -29,28 +29,28 @@
          <number>9</number>
         </property>
         <item row="0" column="0">
-         <widget class="QLabel" name="label_13">
+         <widget class="QGroupBox" name="originalGroupBox">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-            <horstretch>2</horstretch>
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+            <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="text">
+          <property name="title">
            <string>Original</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QLabel" name="label_14">
+         <widget class="QGroupBox" name="generatedGroupBox">
           <property name="sizePolicy">
-           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-            <horstretch>2</horstretch>
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+            <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="text">
-           <string>Generated (preview)</string>
+          <property name="title">
+           <string>Generated</string>
           </property>
          </widget>
         </item>
@@ -520,7 +520,16 @@
     <addaction name="menuSave"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+    <addaction name="separator"/>
+    <addaction name="actionAboutQt"/>
+   </widget>
    <addaction name="menu_File"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -568,6 +577,16 @@
   <action name="actionOpenSVG">
    <property name="text">
     <string>SVG ...</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About Evo Cubist</string>
+   </property>
+  </action>
+  <action name="actionAboutQt">
+   <property name="text">
+    <string>About Qt</string>
    </property>
   </action>
  </widget>
