--- a/optionsform.ui
+++ b/optionsform.ui
@@ -38,10 +38,23 @@
         <item row="0" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QLineEdit" name="saveDirectoryLineEdit"/>
+           <widget class="QLineEdit" name="saveDirectoryLineEdit">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>20</height>
+             </size>
+            </property>
+           </widget>
           </item>
           <item>
            <widget class="QPushButton" name="selectDirectoryPushButton">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>23</height>
+             </size>
+            </property>
             <property name="text">
              <string>Choose ...</string>
             </property>
@@ -57,7 +70,17 @@
          </widget>
         </item>
         <item row="2" column="1">
-         <widget class="QLineEdit" name="imageFilenameTemplateLineEdit"/>
+         <widget class="QLineEdit" name="imageFilenameTemplateLineEdit">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="toolTip">
+           <string>%1 = original image filename, %2 = generations, %3 = selected generations</string>
+          </property>
+         </widget>
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="label_3">
@@ -68,6 +91,12 @@
         </item>
         <item row="3" column="1">
          <widget class="QSpinBox" name="saveIntervalSpinBox">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
           <property name="suffix">
            <string> s</string>
           </property>
@@ -84,6 +113,12 @@
         </item>
         <item row="4" column="1">
          <widget class="QCheckBox" name="autoSaveCheckBox">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>17</height>
+           </size>
+          </property>
           <property name="text">
            <string>Autosave</string>
           </property>
