--- a/optionsform.ui
+++ b/optionsform.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>406</width>
-    <height>499</height>
+    <width>403</width>
+    <height>267</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,15 +19,18 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>50</height>
+       <height>200</height>
       </size>
      </property>
      <property name="title">
-      <string>Generated images</string>
+      <string>Generated images/DNA</string>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <layout class="QFormLayout" name="formLayout">
+        <property name="fieldGrowthPolicy">
+         <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+        </property>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
@@ -38,17 +41,17 @@
         <item row="0" column="1">
          <layout class="QHBoxLayout" name="horizontalLayout">
           <item>
-           <widget class="QLineEdit" name="saveDirectoryLineEdit">
+           <widget class="QLineEdit" name="imageSaveDirectoryLineEdit">
             <property name="minimumSize">
              <size>
-              <width>0</width>
+              <width>155</width>
               <height>20</height>
              </size>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="selectDirectoryPushButton">
+           <widget class="QPushButton" name="selectImageDirectoryPushButton">
             <property name="minimumSize">
              <size>
               <width>0</width>
@@ -62,14 +65,14 @@
           </item>
          </layout>
         </item>
-        <item row="2" column="0">
+        <item row="1" column="0">
          <widget class="QLabel" name="label_2">
           <property name="text">
            <string>Image filename template</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
+        <item row="1" column="1">
          <widget class="QLineEdit" name="imageFilenameTemplateLineEdit">
           <property name="minimumSize">
            <size>
@@ -82,14 +85,14 @@
           </property>
          </widget>
         </item>
-        <item row="3" column="0">
+        <item row="6" column="0">
          <widget class="QLabel" name="label_3">
           <property name="text">
            <string>Save interval</string>
           </property>
          </widget>
         </item>
-        <item row="3" column="1">
+        <item row="6" column="1">
          <widget class="QSpinBox" name="saveIntervalSpinBox">
           <property name="minimumSize">
            <size>
@@ -111,7 +114,7 @@
           </property>
          </widget>
         </item>
-        <item row="4" column="1">
+        <item row="7" column="1">
          <widget class="QCheckBox" name="autoSaveCheckBox">
           <property name="minimumSize">
            <size>
@@ -120,26 +123,74 @@
            </size>
           </property>
           <property name="text">
-           <string>Autosave</string>
+           <string>Autosave on</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLineEdit" name="dnaSaveDirectoryLineEdit">
+            <property name="minimumSize">
+             <size>
+              <width>155</width>
+              <height>20</height>
+             </size>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="selectDNADirectoryPushButton">
+            <property name="minimumSize">
+             <size>
+              <width>0</width>
+              <height>23</height>
+             </size>
+            </property>
+            <property name="text">
+             <string>Choose ...</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
+        <item row="3" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Save DNA to directory</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="1">
+         <widget class="QLineEdit" name="dnaFilenameTemplateLineEdit">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
+          <property name="toolTip">
+           <string>%1 = original image filename, %2 = generations, %3 = selected generations</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_5">
+          <property name="text">
+           <string>DNA filename template</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="2">
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
        </layout>
       </item>
      </layout>
-    </widget>
-   </item>
-   <item>
-    <widget class="QGroupBox" name="groupBox_2">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>50</height>
-      </size>
-     </property>
-     <property name="title">
-      <string>DNA</string>
-     </property>
     </widget>
    </item>
    <item>
