--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -131,7 +131,7 @@
           <item row="4" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
-             <string>Polygons</string>
+             <string>Genomes</string>
             </property>
            </widget>
           </item>
@@ -432,7 +432,7 @@
              <number>1</number>
             </property>
             <property name="maximum">
-             <number>1000</number>
+             <number>999</number>
             </property>
             <property name="value">
              <number>230</number>
