--- a/optionsform.ui
+++ b/optionsform.ui
@@ -45,7 +45,7 @@
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>2000</number>
+            <number>9999999</number>
            </property>
            <property name="singleStep">
             <number>50</number>
@@ -71,7 +71,7 @@
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>2000</number>
+            <number>9999999</number>
            </property>
            <property name="singleStep">
             <number>50</number>
@@ -97,7 +97,7 @@
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>2000</number>
+            <number>9999999</number>
            </property>
            <property name="singleStep">
             <number>50</number>
@@ -123,7 +123,7 @@
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>2000</number>
+            <number>9999999</number>
            </property>
            <property name="singleStep">
             <number>50</number>
@@ -192,7 +192,7 @@
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>2000</number>
+            <number>9999999</number>
            </property>
            <property name="singleStep">
             <number>50</number>
@@ -218,7 +218,7 @@
             <number>1</number>
            </property>
            <property name="maximum">
-            <number>2000</number>
+            <number>9999999</number>
            </property>
            <property name="singleStep">
             <number>50</number>
